--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,11 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
+  geolocator: ^11.0.0
   get_it: ^7.6.8
   go_router: ^13.2.2
   random_name_generator: ^1.3.0
+  uuid: ^4.3.3
 
 dev_dependencies:
   flutter_lints: ^3.0.0
